# taxo

./: .gitignore  Cargo.toml  README.md
src/: .main.rs.swp  lib.rs  main.rs
src/taxo/: mod.rs  rules.rs  test.rs
src/taxo/rule/: glob.rs  mod.rs  regex.rs
