[package]
name = "taxo"
description = "Categorizes paths based on glob or regexp rules."
repository = "https://git.lrdesign.com/judson/taxo"
readme = "README.md"
license = "MIT"
version = "0.1.0"
authors = ["Judson <nyarly@gmail.com>"]

[dependencies]
docopt = "~0.6.78"
rustc-serialize = "~0.3"
glob = "~0.2.11"
regex = "~0.1"
